# cake_wallet

./: .gitignore  .gitmodules  .metadata  Dockerfile  LICENSE.md  Makefile  PRIVACY.md  README.md  Refund Pollicy.md  SECURITY.md  analysis_options.yaml  build-guide-linux.md  build-guide-win.md  build_macos.sh  cakewallet.bat  com.cakewallet.CakeWallet.yml  configure_cake_wallet.sh  configure_cake_wallet_android.sh  configure_cake_wallet_macos.sh  env.json  how_to_add_new_wallet_type.md  howto-build-android.md  howto-build-cw_ldk.md  howto-build-ios.md  howto-build-macos.md  howto-build-windows.md  integration_test_runner.sh  key.jks  lws-get_address_txs.txt  model_generator.sh  pubspec.yaml  pubspec_base.yaml  pubspec_default.yaml  pubspec_description.yaml  readme-cw_ldk.md  run-android.sh  testing
.github/: pull_request_template.md
android/: .project  build.gradle  gradle.properties  settings.gradle
assets/: arbitrum_node_list.yml  banano_node_list.yml  base_node_list.yml  bitcoin_cash_electrum_server_list.yml  bitcoin_electrum_server_list.yml  decred_node_list.yml  digibyte_electrum_server_list.yml  dogecoin_electrum_server_list.yml  electrum_server_list.yml  ethereum_server_list.yml  gnosis_node_list.yml  haven_node_list.yml  index.html  litecoin_electrum_server_list.yml  minotari_node_list.yml  nano_node_list.yml  nano_pow_node_list.yml  node_list.yml  polygon_node_list.yml  salvium_node_list.yml  solana_node_list.yml  tron_node_list.yml  wownero_node_list.yml  xelis_node_list.yml  zano_node_list.yml  zcash_node_list.yml
cw_arbitrum/: .metadata  pubspec.yaml
cw_base/: pubspec.yaml
cw_bitcoin/: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml  pubspec_base.yaml  pubspec_description.yaml
cw_bitcoin_cash/: .metadata  README.md  pubspec.yaml
cw_core/: README.md  pubspec.yaml
cw_decred/: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
cw_digibyte/: CHANGELOG.md  README.md  pubspec.yaml
cw_dogecoin/: README.md  pubspec.yaml
cw_dummy/: pubspec.yaml
cw_ethereum/: README.md  pubspec.yaml
cw_evm/: README.md  pubspec.yaml
cw_gnosis/: pubspec.yaml
cw_haven/: .gitignore  README.md  pubspec.yaml
cw_ldk/: .gitignore  .metadata  Cargo.toml  Makefile  README.md  ios-ln-guide.md  pubspec.yaml
cw_ldk/android/: build.gradle  settings.gradle
cw_ldk/android/src/main/: AndroidManifest.xml
cw_ldk/android/src/main/kotlin/com/cakewallet/cw_ldk/: CwLdkPlugin.kt
cw_ldk/example/: README.md  pubspec.yaml
cw_ldk/example/android/app/: build.gradle
cw_ldk/example/android/app/src/debug/: AndroidManifest.xml
cw_ldk/example/android/app/src/main/: AndroidManifest.xml
cw_ldk/example/android/app/src/main/kotlin/com/cakewallet/cw_ldk_example/: MainActivity.kt
cw_ldk/example/ios/Runner/: Info.plist
cw_ldk/example/ios/Runner.xcodeproj/: project.pbxproj
cw_ldk/example/lib/: main.dart
cw_ldk/example/lib/pages/: create_channel.dart  create_invoice.dart  home.dart  info.dart  pay_invoice.dart  show_qr_code.dart
cw_ldk/example/lib/pages/channel/: close.dart  create.dart
cw_ldk/example/lib/pages/invoice/: create.dart  pay.dart  qr_code_scanner.dart
cw_ldk/example/test/: ldk_test.dart  widget_test.dart
cw_ldk/ios/: cw_ldk.podspec
cw_ldk/ios/Classes/: CwLdkPlugin.h  CwLdkPlugin.m  SwiftCwLdkPlugin.swift  libldk_ffi.h
cw_ldk/lib/: cw_ldk.dart  ffi.dart
cw_ldk/native/ldk-ffi/: Cargo.toml  build.rs  libldk_ffi.h
cw_ldk/native/ldk-ffi/src/: lib.rs  main.rs
cw_ldk/native/ldk-lib/: Cargo.toml
cw_ldk/native/ldk-lib/src/: bitcoind_client.rs  cli.rs  convert.rs  disk.rs  flutter_ffi.rs  hex_utils.rs  lib.rs  main.rs
cw_ldk/test/: cw_ldk_test.dart
cw_lightning/: README.md  pubspec.yaml
cw_minotari/: INTEGRATION_STATUS.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
cw_minotari/rust/: Cargo.toml  build.rs  cbindgen.toml
cw_minotari/rust/src/: error.rs  lib.rs  wallet.rs
cw_monero/: .gitignore  .metadata  README.md  pubspec.yaml
cw_monero/android/: .project  CMakeLists.txt  build.gradle  settings.gradle
cw_monero/android/jni/: monero_jni.cpp
cw_monero/android/src/main/: AndroidManifest.xml
cw_monero/android/src/main/kotlin/com/cakewallet/monero/: CwMoneroPlugin.kt  FlutterMethodHandler.kt  MoneroApi.kt  MoneroWalletSyncStatusListener.kt
cw_monero/linux/: CMakeLists.txt  cw_monero_plugin.cc  cw_monero_plugin_private.h
cw_monero/linux/flutter/ephemeral/.plugin_symlinks/: path_provider_linux  tor
cw_monero/linux/include/cw_monero/: cw_monero_plugin.h
cw_monero/linux/test/: cw_monero_plugin_test.cc
cw_monerolws/: LICENSE  README.md  pubspec.yaml
cw_mweb/: .gitignore  .metadata  README.md  ffigen_config.yaml  gen-protobuf.sh  pubspec.yaml
cw_nano/: LICENSE  pubspec.yaml
cw_polygon/: README.md  pubspec.yaml
cw_salvium/: LICENSE  README.md  pubspec.yaml
cw_salvium/android/: CMakeLists.txt  build.gradle  settings.gradle
cw_salvium/android/src/main/: AndroidManifest.xml
cw_salvium/android/src/main/kotlin/com/cakewallet/cw_salvium/: CwSalviumPlugin.kt
cw_shared_external/: README.md  pubspec.yaml
cw_solana/: README.md  pubspec.yaml
cw_tari/: .metadata  README.md  pubspec.yaml
cw_tron/: README.md  pubspec.yaml
cw_wownero/: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
cw_xelis/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
cw_zano/: README.md  pubspec.yaml
cw_zano/android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
cw_zano/android/src/main/: AndroidManifest.xml
cw_zano/android/src/main/kotlin/com/cakewallet/cw_zano/: CwZanoPlugin.kt
cw_zcash/: README.md  analysis_options.yaml  pubspec.yaml
docs/: ADDING_EVM_L2_WALLET_NETWORK_TYPES.md  ADDING_NEW_WALLET_TYPES.md  NEW_WALLET_TYPES.md  adding_new_l2_network_guide.md  dgb_listing_requirements.md  dgb_project_plan.md
elinux/: CMakeLists.txt  cake_wallet.desktop  sailfish-build.sh  sailfish-prepare.sh  sailfishos.spec
example/: .metadata  README.md  pubspec.yaml
integration_test/: app_test.dart  funds_related_tests.dart
ios/: .gitignore  Podfile  (+5 more)
lib/: di.dart  (+19 more)
(+6048 files in other folders)
