[package]
name = "minotari_wallet_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core FFI dependencies
libc = "0.2"

# Minotari dependencies - we'll need to add the actual minotari-cli dependencies
# For now, these are placeholders based on what minotari-cli likely uses
# TODO: Update with actual dependencies from minotari-cli once we analyze it

# Logging and error handling
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BIP39 for mnemonic handling
bip39 = { version = "2.0", features = ["rand"] }

[build-dependencies]
cbindgen = "0.27"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
